# TyTorch

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
src/: trainer.py
training/: trainer.py
tytorch/: data.py  data_utils.py  datapipeline.py  dataset.py  metrics.py  trainer.py  utils.py
tytorch/datapipeline/: base.py  global_transform_strategies.py  item_transform_strategies.py  loader_strategies.py
tytorch/examples/autoencoder/: find_similar_embeddings.py  generate_test_embeddings.py  sharpen.py  train_autoencoder.py  utils.py  visualize_latent_space.py
tytorch/examples/classification/image/flowers/: train.py  tune.py
tytorch/examples/classification/sequence/gestures/: train.py  tune.py
tytorch/examples/datasets/: fashion.py  flowers.py
tytorch/examples/datasets/classification/sequence/: gestures.py
tytorch/examples/datasets/forecasting/sunspot/: sunspot.py
tytorch/examples/models/: CustomCNN.py  CustomResNet.py
tytorch/examples/timeseriesforecasting/sunspots/: train.py
tytorch/examples/traintune/: tune.py
tytorch/examples/traintune/classification/image/flowers/: train.py
tytorch/examples/traintune/classification/sequence/gestures/: train.py  tune.py
tytorch/examples/traintune/forecasting/sunspots/: train.py
tytorch/strategies/: global_transform_strategies.py  item_transform_strategies.py  loader_strategies.py
tytorch/utils/: data.py  mlflow.py  trainer_utils.py
