[project]
name = "tytorch"
version = "0.6.92"
description = "A simple trainer for pytorch"
authors = [
    { name = "SaferSephy" }
]
dependencies = [
    "loguru",
    "pydantic",
    "setuptools>=75.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel",
]

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F", "N", "I"]
ignore = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tytorch"]


[project.urls]
homepage = "https://github.com/safersephy/tytorch"